# PGPI-G2.4

./: .project  README.md
Code/: .gitignore  build.sh  db.sqlite3  populate.py  pyproject.toml  requirements.txt
Code/Ultimos_Cambios/: dummie.txt
Code/config/: local_settings.py.hola  settings.py
Code/ecommerce/: settings.py  urls.py
Code/ecommerce/apps/account/: admin.py  forms.py  models.py  urls.py  views.py
Code/ecommerce/apps/basket/: basket.py  views.py
Code/ecommerce/apps/catalogue/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
Code/ecommerce/apps/checkout/: models.py  urls.py  views.py
Code/ecommerce/apps/orders/: admin.py  models.py  views.py
Code/ecommerce/apps/terms/: urls.py  views.py
Code/media/static/css/: custom.css  style.css
Code/media/templates/: about-us.html  brands.html  cart-empty.html  index.html  product.html  shop-grid.html  track-order.html
Code/media/templates/main/: base.html
Code/shop/: admin.py  forms.py  models.py  urls.py  views.py
Code/shop/migrations/: 0033_department_remove_kalainstance_saller_and_more.py
Code/templates/: base.html
Code/templates/account/: incidencia.html
Code/templates/basket/: summary.html
Code/templates/catalogue/: calendar.html  category.html  event.html  eventos.html  index.html  medics.html  single.html
Code/templates/checkout/: delivery_address.html  delivery_address_options.html  delivery_address_rellenar.html  delivery_choices.html  payment_selection.html  payment_successful.html
Code/templates/terms/: terms.html
(+162 files in other folders)
