[tool.poetry]
name = "citamedica"
version = "0.1.0"
description = ""
authors = ["Diego <diewentdiaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
